<resources>
    <string name="app_name">Know Your Government</string>
    <string name="google_civic_information_api"><u>Google Civic Information API</u></string>
    <string name="civil_advocacy">Civil Advocacy</string>
    <string name="data_provided_by">Data provided by</string>
    <string name="_2021_vedant_shankar_suram">© 2021, Vedant Shankar Suram</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="textview">TextView</string>
    <string name="address">Address:</string>
    <string name="email">Email:</string>
    <string name="phone">Phone:</string>
    <string name="website">Website:</string>
    <string name="todo">TODO</string>
    <string name="data_cannot_be_accessed_loaded_without_an_internet_connection">Data cannot be accessed/loaded without an internet connection.</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="no_data_for_location">No Data For Location</string>
</resources>