<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".OfficialDetail"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detail_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".OfficialDetail">

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="75dp"
            android:linksClickable="true"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tx1"
            app:layout_constraintTop_toTopOf="@+id/tx1" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tx2"
            app:layout_constraintStart_toStartOf="@+id/address"
            app:layout_constraintTop_toTopOf="@+id/tx2" />

        <TextView
            android:id="@+id/postName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post" />

        <TextView
            android:id="@+id/Location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#A85CB5"
            android:gravity="center"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/post"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/textview"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Location"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/party"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/postName" />

        <ImageView
            android:id="@+id/imageperson"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/todo"
            android:onClick="ClickedOnPhoto"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/party"
            app:layout_constraintVertical_bias="1.0"
            tools:srcCompat="@tools:sample/avatars" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="640dp" />

        <ImageView
            android:id="@+id/partylogo"
            android:layout_width="99dp"
            android:layout_height="78dp"
            android:contentDescription="@string/todo"
            android:onClick="LogoClicked"
            app:layout_constraintBottom_toBottomOf="@+id/imageperson"
            app:layout_constraintEnd_toEndOf="@+id/imageperson"
            app:layout_constraintStart_toStartOf="@+id/imageperson"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tx1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/address"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/tx2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/phone"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/address" />

        <TextView
            android:id="@+id/tx3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx2" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/tx3"
            app:layout_constraintStart_toStartOf="@+id/phone"
            app:layout_constraintTop_toTopOf="@+id/tx3" />

        <TextView
            android:id="@+id/tx4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/website"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx3" />

        <TextView
            android:id="@+id/website"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/address"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toTopOf="@+id/tx4" />

        <ImageView
            android:id="@+id/fb"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:contentDescription="@string/todo"
            android:onClick="facebookClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/twit"
            app:layout_constraintHorizontal_bias="0.571"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/facebook" />

        <ImageView
            android:id="@+id/twit"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="45dp"
            android:contentDescription="@string/todo"
            android:onClick="twitterClicked"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/website"
            app:srcCompat="@drawable/twitter" />

        <ImageView
            android:id="@+id/youtube"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:onClick="youtubeClicked"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/twit"
            app:srcCompat="@drawable/youtube"
            android:contentDescription="@string/todo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>